# PyMusicPlayer

./: .gitignore  README.md  TODO.md  pyproject.toml
src/: main.py
src/modules/: player.py  types_.py  utils.py
src/modules/ui/: widgets.py  windows.py
